--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@vitest/ui": "^0.34.6",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -47,6 +48,7 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
     "vite-plugin-eslint": "^1.8.1",
-    "vitest": "^0.34.6"
+    "vitest": "^0.34.6",
+    "vitest-canvas-mock": "^0.3.3"
   }
 }
