Raise the code coverage by adding more test cases, verify rendering more specifically.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,7 @@
     "jsx": "react-jsx",
     "types": [
       "vitest/globals",
-      "@testing-library/jest-dom",
-      "./test/vitest.d.ts"
+      "@testing-library/jest-dom"
     ],
     /* Linting */
     "strict": true,
